--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,15 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", "Noto Nastaliq Urdu", sans-serif;
+  background-color: #fdfdfd;
+}
+
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-thumb {
+  background: #16a34a;
+  border-radius: 8px;
 }
